# NaukriGraph

./: .gitignore
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: CandidateScreener.tsx
frontend/src/pages/: Index.tsx
server/: app.py  graph.py  main.py  nodes.py  noraml-app.py  pyproject.toml  requirements.txt  state.py  utils.py
